adjust scroll behavior for links

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <header class="fixed-header">
       <nav>
         <ul>
-          <li><a>Featured</a></li>
-          <li><a>Media</a></li>
-          <li><a>About Film</a></li>
-          <li><a>Cast & Crew</a></li>
+          <li><a href="#featured">Featured</a></li>
+          <li><a href="#media">Media</a></li>
+          <li><a href="#about">About Film</a></li>
+          <li><a href="#cast_crew">Cast & Crew</a></li>
         </ul>
       </nav>
     </header>
