--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -8,23 +11,47 @@
       <nav>
         <ul>
           <li><a href="#featured">Featured</a></li>
-          <li><a href="#media">Media</a></li>
           <li><a href="#about">About Film</a></li>
           <li><a href="#cast_crew">Cast & Crew</a></li>
+          <li><a href="#media">Media</a></li>
         </ul>
       </nav>
     </header>
     <section class="section" id="featured">
-      <h2>Section 1</h2>
-    </section>
-    <section class="section" id="media">
-      <h2>Section 2</h2>
+      <div class="title">
+        <span>Against</span>
+        <span>The</span>
+        <span>Spread</span>
+        <p>From the executive producer of THE VIRTUOSO</p>
+      </div>
     </section>
     <section class="section" id="about">
-      <h2>Section 3</h2>
+      <h2>About</h2>
+      <p>Anthony, a rugged gambler living in a southern trailer park, reignites an old rivalry with Shiloh, a menacing loan shark, in order to fund his nimwitted nephew's ‘get rich quick’ scheme involving a nose-job, a beach house, and an online girlfriend. Things spiral into chaos after Anthony's other nephew, Lorenzo, becomes entangled in a star-crossed romance with Shiloh's daughter, Jamelia, and the three family members are plunged into a web of grave peril.</p>
     </section>
     <section class="section" id="cast_crew">
-      <h2>Section 4</h2>
+      <h2>Cast & Crew</h2>
+      <p>
+        Written and Directed by
+        Mitchell Cole
+
+        Produced by Thomas Rondinella
+
+        Executive Producer
+        Nick Stagliano
+        Brandon Prevatt
+        Wesley Chevillot
+
+        Cast
+        Bobby Trovota
+        Jake Skinner
+        Mitchell Cole
+        Jerome Cooper
+        Akira Jackson
+      </p>
+    </section>
+    <section class="section" id="media">
+      <h2>Gallery</h2>
     </section>
     <script src="script.js"></script>
   </body>
