--- a/index.html
+++ b/index.html
@@ -26,33 +26,101 @@
       </div>
     </section>
     <section class="section" id="about">
-      <h2>About</h2>
-      <p>Anthony, a rugged gambler living in a southern trailer park, reignites an old rivalry with Shiloh, a menacing loan shark, in order to fund his nimwitted nephew's ‘get rich quick’ scheme involving a nose-job, a beach house, and an online girlfriend. Things spiral into chaos after Anthony's other nephew, Lorenzo, becomes entangled in a star-crossed romance with Shiloh's daughter, Jamelia, and the three family members are plunged into a web of grave peril.</p>
+      <!-- <h2>About the Film</h2> -->
+       <div class="about-wrapper">
+        <div class="about-content">
+          <div class="image-container">
+            <img src="assets/ATS_Poster_-_Final.png"/>
+          </div>
+          <div>
+            <p>Anthony, a rugged gambler living in a southern trailer park, reignites an old rivalry with Shiloh, a menacing loan shark, in order to fund his nimwitted nephew's ‘get rich quick’ scheme involving a nose-job, a beach house, and an online girlfriend. Things spiral into chaos after Anthony's other nephew, Lorenzo, becomes entangled in a star-crossed romance with Shiloh's daughter, Jamelia, and the three family members are plunged into a web of grave peril.</p>
+          </div>
+        </div>
+       </div>
     </section>
     <section class="section" id="cast_crew">
-      <h2>Cast & Crew</h2>
-      <p>
-        Written and Directed by
-        Mitchell Cole
-
-        Produced by Thomas Rondinella
-
-        Executive Producer
-        Nick Stagliano
-        Brandon Prevatt
-        Wesley Chevillot
-
-        Cast
-        Bobby Trovota
-        Jake Skinner
-        Mitchell Cole
-        Jerome Cooper
-        Akira Jackson
-      </p>
+      <!-- <h2>Cast & Crew</h2> -->
+       <div class="cast-wrapper">
+        <div class="cast-group-container">
+          <div class="cast-group">
+            <h6>Written & Directed by</h6>
+            <p>Mitchell Cole</p>
+          </div>
+          <div class="cast-group">
+            <h6>Starring</h6>
+            <p>Bobby Trovota</p>
+            <p>Jake Skinner</p>
+            <p>Mitchell Cole</p>
+            <p>Jerome Cooper</p>
+            <p>Akira Jackson</p>
+          </div>
+          <div class="cast-group">
+            <h6>Produced by</h6>
+            <p>Thomas Rondinella</p>
+          </div>
+          <div class="cast-group">
+            <h6>Executive producers</h6>
+            <p>Nick Stagliano</p>
+            <p>Brandon Prevatt</p>
+            <p>Wesley Chevillot</p>
+          </div>
+        </div>
+       </div>
     </section>
     <section class="section" id="media">
-      <h2>Gallery</h2>
+      <div class="carousel-container">
+        <div class="carousel-wrapper">
+          <div class="carousel">
+            <img src="https://cdn.mos.cms.futurecdn.net/EQzLmDCLqJgxVgjwKpf5fd-970-80.jpg.webp" class="carousel-image active" alt="Image 1">
+            <img src="https://cdn.mos.cms.futurecdn.net/EQzLmDCLqJgxVgjwKpf5fd-970-80.jpg.webp" class="carousel-image" alt="Image 2">
+            <img src="https://cdn.mos.cms.futurecdn.net/EQzLmDCLqJgxVgjwKpf5fd-970-80.jpg.webp" class="carousel-image" alt="Image 3">
+            <!-- Add more images as needed -->
+          </div>
+        </div>
+        <div class="carousel-dots">
+            <span class="dot active" onclick="showImage(0)"></span>
+            <span class="dot" onclick="showImage(1)"></span>
+            <span class="dot" onclick="showImage(2)"></span>
+            <!-- Add more dots as needed -->
+        </div>
+    </div>
     </section>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-content">
+        <div class="footer-section links">
+          <h2>Quick Links</h2>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#faq">FAQ</a></li>
+          </ul>
+        </div>
+        <div class="footer-section contact">
+          <h2>Contact Us</h2>
+          <p>
+              <span>Address:</span> 123 Main Street, Anytown, USA
+          </p>
+          <p>
+              <span>Phone:</span> (123) 456-7890
+          </p>
+          <p>
+              <span>Email:</span> info@example.com
+          </p>
+          <div class="socials">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        &copy; 2024 A Black Bottom Studios film | Designed by Bradly Lewis LLC
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
