--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         </ul>
       </nav>
     </header>
+    <div class="video-background">
+      <video autoplay muted loop id="bg-video">
+          <source src="assets/WEBSITE VIDEO ATS.mov" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+  </div>
     <section class="section" id="featured">
       <div class="title">
         <span>Against</span>
