--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="image-container">
             <img src="assets/ATS_Poster_-_Final.png"/>
           </div>
-          <div>
+          <div class="synopsis">
             <p>Anthony, a rugged gambler living in a southern trailer park, reignites an old rivalry with Shiloh, a menacing loan shark, in order to fund his nimwitted nephew's ‘get rich quick’ scheme involving a nose-job, a beach house, and an online girlfriend. Things spiral into chaos after Anthony's other nephew, Lorenzo, becomes entangled in a star-crossed romance with Shiloh's daughter, Jamelia, and the three family members are plunged into a web of grave peril.</p>
           </div>
         </div>
