--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
         <div class="glide">
           <div class="glide__track" data-glide-el="track">
             <ul class="glide__slides">
-              <li class="glide__slide"><img src="assets\Untitled_1.1.2.png"></li>
-              <li class="glide__slide"><img src="assets\Untitled_1.1.5.png"></li>
-              <li class="glide__slide"><img src="assets\Untitled_1.3.9.png"></li>
-              <li class="glide__slide"><img src="assets\Untitled_1.3.36.png"></li>
-              <li class="glide__slide"><img src="assets\Untitled_1.3.45.png"></li>
+              <li class="glide__slide"><img src="assets/Untitled_1.1.2.png"></li>
+              <li class="glide__slide"><img src="assets/Untitled_1.1.5.png"></li>
+              <li class="glide__slide"><img src="assets/Untitled_1.3.9.png"></li>
+              <li class="glide__slide"><img src="assets/Untitled_1.3.36.png"></li>
+              <li class="glide__slide"><img src="assets/Untitled_1.3.45.png"></li>
             </ul>
           </div>
           <div class="glide__arrows" data-glide-el="controls">
